agregué algunos estilos al contenedor del formulario

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -343,6 +343,10 @@ dd {
     width:25%;
     float:right;
 }
+#form-twitter-legislador{
+    width:25%;
+    float:right;
+}
 /*partidos politicos*/
 
 #detalle-presentismo {
