agregué lógica:si tiene twitter muestro tl sino muestro form

--- a/app/views/shared/_form_twitter.html.erb
+++ b/app/views/shared/_form_twitter.html.erb
@@ -1,7 +1,5 @@
-<div class="row">
-    <div id="form-twitter-legislador" class="twelvecol last">
-        <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dEo0TzVDZTBZek5zODZtNXIxNGVXSWc6MQ" width="760" height="625" frameborder="0" marginheight="0" marginwidth="0">
+    <div id="form-twitter-legislador" class="threecol last">
+        <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dEo0TzVDZTBZek5zODZtNXIxNGVXSWc6MQ" height="625" width="100%" frameborder="0" marginheight="0" marginwidth="0">
          Cargando...
         </iframe>
     </div>
-</div>
