--- a/app/views/shared/_twitter.html.erb
+++ b/app/views/shared/_twitter.html.erb
@@ -28,6 +28,6 @@
         avatars: false,
         behavior: 'all'
       }
-    }).render().setUser('_nesto').start();
+    }).render().setUser('<%= politician.twitter_user %>').start();
     </script>
 </div>
