--- a/app/views/shared/_politician.html.erb
+++ b/app/views/shared/_politician.html.erb
@@ -9,7 +9,7 @@
 	            <dt>Email:</dt><dd><%= politician.mail %> </dd>
 
                 <% if politician.partido %>
-                <dt>Partido: </dt><dd><%= politician.partido.name %></dd>      
+                <dt>Bloque: </dt><dd><%= politician.partido.name %></dd>      
                 <% end %>
             </dl>
         </div>
@@ -19,6 +19,9 @@
         <h2>Votos</h2>
         <%= render :partial => 'shared/votes', :locals => {:votes => politician.votes}%>
     </div>
-    <%= render :partial => 'shared/twitter'%>
+    <% if politician.twitter_user.blank? %>
     <%= render :partial => 'shared/form_twitter'%>
+    <% else %>
+    <%= render :partial => 'shared/twitter', :locals => {:politician => politician}%>
+    <% end %>
 </div>
