cambié un ancho de px a % para que funcione con el nuevo framework de css

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -361,7 +361,7 @@ dd {
     font-size:300%;
     display:inline;
     float:left;
-    width:160px;
+    width:17%;
     border-right:1px dotted lightgrey;
     padding:20px 15px 0 15px;
     
