--- a/app/views/political_parties/index.html.erb
+++ b/app/views/political_parties/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Bloques</h1>
+  <% if request.path == '/' %>
+  <h2>Bloques</h2>
+  <% else %>
+  <h1>Bloques</h1>
+<% end %>
+
+
 
 <table>
   <tr>
