--- a/app/views/politicians/show.html.erb
+++ b/app/views/politicians/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<%= render :partial => 'shared/politician', :locals => {:politician => @politician} %>
+<%= render :partial => 'shared/politician', :locals => {:miembros => @politician} %>
 
 <%= link_to 'Back', politicians_path %>
