--- a/app/views/shared/_politicians.html.erb
+++ b/app/views/shared/_politicians.html.erb
@@ -2,6 +2,7 @@
   <thead>
     <tr>
       <th>Nombre</th>
+      <th class="bloque">Bloque</th>
       <th class="presentismo">Presencia (%)</th>      
       <th class="presente">Presencias</th>
       <th class="ausente">Ausencias</th>        
@@ -13,6 +14,7 @@
 <% personas.each do |persona| %>
     <tr>
       <td class="nombre"><%= link_to "#{persona.lastName}, #{persona.name}", persona %></td>
+      <td class="bloque"><%= persona.partido %></td>
       <td class="presentismo"><%= number_to_percentage(persona.present_percentage * 100.0, :precision => 0, :separator => ',') %></td>        
       <td class="presente"><%= persona.countPresent %></td>
       <td class="ausente"><%= persona.countAbsence %></td>    
