--- a/app/views/shared/_bloques_filter.html.erb
+++ b/app/views/shared/_bloques_filter.html.erb
@@ -1,10 +1,17 @@
-<form action="<%= filter_action_path %>" method="get" accept-charset="utf-8">
-  <select class='text bloques-chosen-select' name='bloques' multiple="true" data-placeholder='Filtrar por Bloque'>
-  <% bloques.each do |bloque| %>
-    <option <%= "selected" if defined?(@filter) && @filter[:bloques] && @filter[:bloques].include?(bloque.to_s) %>>
-      <%= bloque %>
-    </option>
+<h3>Por Bloque</h3>
+  <ul class="bloques">
+  <% if request.path == '/diputados' or request.path == '/senadores' %>
+    <li class="elegido">Todos</li>
+  <% else %>
+    <li><a href="./">Todos</a></li>
   <% end %>
-  </select>  
-  <input type="submit" value="Filtrar">
-</form>
+  <% bloques.each do |bloque| %>
+    <% if defined?(@filter) && @filter[:bloques] && @filter[:bloques].include?(bloque.to_s) %>
+      <li class="elegido"><%= bloque %>&nbsp;<i>(<%= bloque.miembros.count %>)</i></li>
+    <% else %>
+        <li><a href="./filtrar_por?bloques=<%= bloque %>"><%= bloque %></a>&nbsp;<i>(<%= bloque.miembros.count %>)</i></li>
+    <% end %>
+  <% end %>
+    
+    
+  </ul> 
