--- a/app/views/shared/_bloques_filter.html.erb
+++ b/app/views/shared/_bloques_filter.html.erb
@@ -5,9 +5,9 @@
   <% else %>
     <li><a href="./">Todos</a></li>
   <% end %>
-  <% bloques.each do |bloque| %>
+  <% bloques.each.with_index do |bloque, index| %>
     <% if defined?(@filter) && @filter[:bloques] && @filter[:bloques].include?(bloque.to_s) %>
-      <li class="elegido"><%= bloque %>&nbsp;<i>(<%= bloque.miembros.count %>)</i></li>
+      <li class="elegido">&nbsp;<i>(<%= bloque.miembros.count %>)</i></li>
     <% else %>
         <li><a href="./filtrar_por?bloques=<%= bloque %>"><%= bloque %></a>&nbsp;<i>(<%= bloque.miembros.count %>)</i></li>
     <% end %>
