Agregué proyectos al layout. Agregué to param al project.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
                     <li class="bloques"><a href="/bloques/" class="<%= request.path == '/bloques' ? "active" : "" %>" >Bloques</a></li>
                     <li class="senadores"><a href="/senadores/" class="<%= params[:controller] == 'senators' ? "active" : "" %>" >Senadores</a></li>
                     <li class="diputados"><a href="/diputados/" class="<%= params[:controller] == 'diputados' ? "active" : "" %>" >Diputados</a></li>
+                    <li class="proyectos"><a href="/projects/" class="<%= params[:controller] == 'projects' ? "active" : "" %>" >Proyectos</a></li>                    
                 </ul>
             </div>
        </div>
