agregué info al footer, layout de quienes somos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,11 @@
     </div>
     <div class="row">
         <div id="footer" class"twelvecol last">
+          <p><strong>Congreso Interactivo 2011</strong> <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/ar/"><img src="http://i.creativecommons.org/l/by-nc-sa/2.5/ar/80x15.png"/></a></p>
             <ul class="clearfix">
-                <li><a href="#">Quienes somos</a></li>
-                <li><a href="#">Datos públicos</a></li>
-                <li><a href="#">Creative Commons</a></li>
-                <li><a href="#">Git-Hub</a></li>
+                <li><a href="/quienes-somos">Quienes somos</a></li>
+                <li><a href="#">Metodología</a></li>
+                <li><a href="https://github.com/etagwerker/ci-web/">GitHub</a></li>
             </ul>
         </div>
       </div>
