--- a/app/views/static/quienes_somos.html.erb
+++ b/app/views/static/quienes_somos.html.erb
@@ -1,1 +1,34 @@
-<p>Pepe</p>
+<div id="contenido" class="eightcol">
+  <h1>Quienes Somos - Lista en Beta</h1>
+  <p>Congreso interactivo está impulsado por un grupo de profesionales entusiastas interesados por la transparencia legislativa. No somos una organización sin fines de lucro, no somos partidarios. Nuevo copy de quienes somos es necesario.</p>
+  
+  
+  <h2>Committers</h2>
+  <ul>
+    <li><a href="#">Ernesto Tagwerker</a></li>  
+    <li><a href="#">Damián Calderón</a></li>
+    <li><a href="#">Sebastián Zelonka</a></li>  
+    <li><a href="#">Betina García</a></li>  
+    <li><a href="#">José Allona</a></li>  
+    <li><a href="#">Martín Szyszlican</a></li>  
+    <li><a href="#">Santiago</a></li>  
+  </ul>
+  
+  <h2>Colaboradores</h2>
+  <ul>
+    <li><a href="#">Enrique Stanziola</a></li>  
+    <li><a href="#">Tess</a></li>  
+  </ul>
+  
+  <h2>Antiguos colaboradores</h2>
+  <ul>
+    <li><a href="#">Verónica Traynor</a></li>  
+    <li><a href="#">Javier Astigueta</a></li>  
+    <li><a href="#">Diego López Castan</a></li>  
+    <li><a href="#">Juan Lanus</a></li>  
+  </ul>
+</div>
+<div id="sidebar" class="fourcol last">
+  <h2>Como colaborar</h2>
+  <p>Congreso interactivo está impulsado por un grupo de profesionales entusiastas interesados por la transparencia legislativa. No somos una organización sin fines de lucro, pero tampoco buscamos lucrar con el proyecto. Nuevo copy de quienes somos es necesario</p>
+</div>
