actualicé cambios de diputados a senadores en facetas

--- a/app/views/senators/index.html.erb
+++ b/app/views/senators/index.html.erb
@@ -3,11 +3,13 @@
     
     <div id="facetas" class="twocol">
       <%= render :partial => 'shared/bloques_filter', :locals => { :bloques => @bloques } %>
-    </div>
-    <div id="facetas" class="twocol">
       <%= render :partial => 'shared/districts_filter', :locals => { :distritos => @distritos } %>
-    </div>    
+    
+    </div>
     <div id="legisladores" class="tencol last">
+      <%if defined?(@filter)%>
+      <%= render :partial => 'shared/mensaje', :locals => {:distritos => @filter[:distritos], :bloques => @filter[:bloques]}%>
+      <% end %>
       <%= render :partial => 'shared/politicians', :locals => {:personas => @senators}%>
     </div>
 </div>
